--- a/src/wagtail_lms/templates/wagtail_lms/scorm_player.html
+++ b/src/wagtail_lms/templates/wagtail_lms/scorm_player.html
@@ -194,6 +194,12 @@ console.log('SCORM API loaded and ready');
     background-color: #555;
 }
 
+.lms-player__back-button:focus {
+    background-color: #555;
+    outline: 2px solid #4a90e2;
+    outline-offset: 2px;
+}
+
 .lms-player__status {
     font-weight: 600;
     color: #666;
