--- a/src/wagtail_lms/templates/wagtail_lms/lesson_page.html
+++ b/src/wagtail_lms/templates/wagtail_lms/lesson_page.html
@@ -56,6 +56,7 @@
   data-frame-js="{% static 'wagtail_lms/vendor/h5p-standalone/frame.bundle.js' %}"
   data-frame-css="{% static 'wagtail_lms/vendor/h5p-standalone/styles/h5p.css' %}"
   data-h5p-css="{% static 'wagtail_lms/vendor/h5p-standalone/styles/h5p.css' %}"
+  data-user-name="{{ request.user.get_username }}"
   id="h5p-standalone-script">
 </script>
 <script src="{% static 'wagtail_lms/js/h5p-lesson.js' %}"></script>
